tests/negative/gold/abstract2_test.gold
tests/negative/abstract2_test.toit:8:12: error: Unresolved identifier: 'foo'
    return super
           ^~~~~
Compilation failed.
